--- a/style.css
+++ b/style.css
@@ -217,7 +217,7 @@ box-shadow: 5px 5px 30px -10px gray;
   font-weight: normal;
 }
 
-@media (max-width: 576px;){
+@media (max-width: 576px){
   .btn-div{
     display: block;
   }
